--- a/Views/Farmer/Create.cshtml
+++ b/Views/Farmer/Create.cshtml
@@ -41,7 +41,7 @@
         <span asp-validation-for="Province" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="ProfileImage">Upload Image</label>
+        <label asp-for="ProfileImage">Upload Profile Image</label>
             <input asp-for="ProfileImage" type="file" class="form-control" placeholder="Choose Image">
             <span asp-validation-for="ProfileImage" class="text-danger"></span>
     </div>
