--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -21,7 +21,7 @@
                                 <p class="card-text">Description: @product.Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-sm btn-outline-primary">Edit</a>
+                                        @* <a asp-controller="Product" asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-sm btn-outline-primary">Edit</a> *@
                                         <form asp-controller="Product" asp-action="Delete" asp-route-id="@product.ProductId" method="post" onsubmit="return confirm('Are you sure you want to delete this product?');" style="display: inline;">
                                             <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
                                         </form>
