--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,18 +25,48 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Create">Create Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">View Products</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Employee"))
+                        {
+                            @*------------------------------ Employee can View farmers accounts and choose to delete them*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="Index">View Profiles</a>
+                            </li>
+                            @*------------------------------ Employee can view farmer products*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductFilter">View Products</a>
+                            </li>
+                            @*------------------------------ Employee can register farmers accounts*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register Farmer</a>
+                            </li>
+                            @*------------------------------ Employee can Log Out*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                            </li>
+                        }
+                        else if (User.Identity.IsAuthenticated && User.IsInRole("Farmer"))
+                        {             
+                            @*------------------------------ Farmer can create his profile*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="Create">Create Profile</a>
+                            </li>
+                            @*------------------------------ Farmer can view his profile*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Farmer" asp-action="Index">Your Profile</a>
+                            </li>
+                            @*------------------------------ Farmer can create a product*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Create">Create Product</a>
+                            </li>
+                            @*------------------------------ Farmer can view his products*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">View Products</a>
+                            </li>                          
+                            @*------------------------------ Farmer can Log Out*@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
@@ -59,3 +89,4 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
