--- a/Views/Product/ProductFilter.cshtml
+++ b/Views/Product/ProductFilter.cshtml
@@ -45,6 +45,12 @@
                                 <p class="card-text">Production Date: @product.ProductDate.ToString("dd/MM/yyyy")</p>
                                 <p class="card-text">Description: @product.Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        @* <a asp-controller="Product" asp-action="Edit" asp-route-id="@product.ProductId" class="btn btn-sm btn-outline-primary">Edit</a> *@
+                                        <form asp-controller="Product" asp-action="Delete" asp-route-id="@product.ProductId" method="post" onsubmit="return confirm('Are you sure you want to delete this product?');" style="display: inline;">
+                                            <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
